# l2l1

./: .gitignore  CMakeLists.txt  compute.cpp  l2l1.hpp  main.cpp  parameters.cpp  parameters.hpp  rms.hpp  utilities.cpp  utilities.hpp
headers/: compute.hpp  correlation.hpp  parameters.hpp
matlab_scripts/: check_rms.m  rms.m
sources/: compute.cpp  main.cpp  parameters.cpp  utilities.cpp
